--- a/tractor_inspector_finder/public/index.html
+++ b/tractor_inspector_finder/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> -->
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
